# hello-cmake

./: CMakeLists.txt
